--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "jest --coverage",
-    "start": "tsc && node dist/app.js",
+    "start": "tsc && node dist/app.js --watch",
     "lint": "eslint ./src --ext .ts",
     "build": "tsc --build tsconfig.json",
     "build:watch": "tsc --build tsconfig.json --watch"
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@commitlint/config-conventional": "^18.6.1",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
@@ -31,14 +32,15 @@
     "extends": "@commitlint/config-conventional"
   },
   "lint-staged": {
-		"*.js": ""
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
+    "*.js": ""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2"
   }
 }
