--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "jest --coverage",
+    "testa": "autocannon http://localhost:3002/terms/check",
     "start": "tsc && node dist/app.js --watch",
     "lint": "eslint ./src --ext .ts",
     "build": "tsc --build tsconfig.json",
@@ -22,6 +23,7 @@
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
+    "autocannon": "^7.15.0",
     "commitlint": "^18.6.1",
     "eslint": "^8.56.0",
     "husky": "^9.0.11",
