test: Add validate terms test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "strictFunctionTypes": true,
     "alwaysStrict": true,
     "removeComments": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "types": [
+      "jest"
+    ]
   },
   "include": [
     "src/**/*"
