--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest --coverage",
     "testa": "autocannon http://localhost:3002/terms/check",
-    "start": "tsc && node dist/app.js --watch",
+    "start": "tsc && nodemon dist/app.js --watch",
     "lint": "eslint ./src --ext .ts",
     "build": "tsc --build tsconfig.json",
     "build:watch": "tsc --build tsconfig.json --watch"
@@ -19,6 +19,7 @@
     "@commitlint/config-conventional": "^18.6.1",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
+    "@types/event-stream": "^4.0.5",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
@@ -28,6 +29,7 @@
     "eslint": "^8.56.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.3",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
@@ -46,6 +48,9 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "csv-parser": "^3.0.0",
+    "event-stream": "^4.0.1",
+    "express": "^4.18.2",
+    "stream": "^0.0.2"
   }
 }
