--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "tsc && nodemon dist/app.js --watch",
     "lint": "eslint ./src --ext .ts",
     "build": "tsc --build tsconfig.json",
-    "build:watch": "tsc --build tsconfig.json --watch"
+    "build:watch": "tsc --build tsconfig.json --watch",
+    "prebuild": "rimraf dist"
   },
   "keywords": [],
   "author": "",
