--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest --coverage",
     "testa": "autocannon http://localhost:3002/terms/check",
     "start": "tsc && nodemon dist/app.js --watch",
+    "start:dev": "nodemon --exec ts-node src/app.ts",
     "lint": "eslint ./src --ext .ts",
     "build": "tsc --build tsconfig.json",
     "build:watch": "tsc --build tsconfig.json --watch",
@@ -32,6 +33,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "commitlint": {
@@ -47,6 +49,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "chart.js": "^4.4.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
