--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
   "exclude": [
     "node_modules",
     "**/*.spec.ts"
-  ]
+  ],
+  "watchOptions": {
+    "watchFile": "fixedPollingInterval"
+  }
 }
